jetbrains-plugins/hubl-language/src/test/testData/AnnotatorTestData.java
public class Test {
  public static void main(String[] args) {
    System.out.println("Hubl:website");
    System.out.println("Hubl:key with spaces");
    System.out.println("Hubl:<error descr="Unresolved property">websit</error>");
  }
}
